use vavr